--- a/regisztralas.html
+++ b/regisztralas.html
@@ -80,8 +80,12 @@
                         <div class="invalid-feedback">Please fill out this field.</div>
 
                     </div>
-                    <button type="submit" class="btn btn-primary" onclick="bejelentkezes()">Bejelentkezés</button>
-                    <button type="regisztracio" class="btn btn-primary" id="regisztralas"> <a href="bejelentkezes.html">Már regisztráltál? - Bejelentkezés</a>  </button>
+                    <div class="col-sm-12">
+                        <button class="bejelentkezes" type="submit" onclick="bejelentkezes()">Regisztráció</button>
+                    </div>
+                    <div class="col-sm-12">
+                        <button class="regisztracio" type="regisztracio" id="regisztralas"> <a href="bejelentkezes.html">Már regisztráltál? - Bejelentkezés</a> </button>
+                    </div>
                 </form>
             </article>
         </div>
